Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.5, 6.6.2, 6.7.2
-
-
33874a942 (dev), 1329e6fac (6.8), 654e2a446 (6.7), 345bec183 (tqtc/lts-6.5), 06fcb3dfe (dev), 5abc6e9cc (6.8)
Description
Only reproducible when Windows Taskbar is on top of screen. Currently I have only tested Windows 10 since I see no way to move Windows 11 Taskbar around.
A minimal reproducer:
int main(int argc, char *argv[]) { QApplication app(argc, argv); auto *widget = new QWidget(nullptr); QMetaObject::invokeMethod(widget, [widget]{ widget->setFixedHeight(100); }, Qt::QueuedConnection); widget->show(); return app.exec(); }
First move Taskbar to top, then run the sample, and repeat maximizing and resorting the window. From 2nd maximization, one is going to see a weird offset in y-position as shown in attached gif. And with more repetition goes on, offset grows too. The increment of offset seems to be the height of Taskbar.
Attachments
Issue Links
- relates to
-
QTBUG-129405 Maximizing and restoring a window gradually moves it downwards
- Closed
For Gerrit Dashboard: QTBUG-123752 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
598483,1 | QWindowsWindow: Refactor corrections related to task bar on top / left | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |